[#10] melhorando as exception do sistema