@@ -11,7 +11,6 @@ import java.io.Serializable;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 /**
  * @author Zorzi
@@ -50,7 +49,7 @@ public class User extends BaseEntityVersioned implements UserDetails, Serializab
     private List<Permission> permissions;
 
     public List<String> getRoles() {
-        return permissions.stream().map(p -> p.getDescription()).collect(Collectors.toList());
+        return permissions.stream().map(Permission::getDescription).toList();
     }
 
     @Override
@@ -89,60 +88,28 @@ public class User extends BaseEntityVersioned implements UserDetails, Serializab
     }
 
     // Getters && Setters
-    public void setUserName(String userName) {
-        this.userName = userName;
-    }
-
     public String getFullName() {
         return fullName;
-    }
-
-    public void setFullName(String fullName) {
-        this.fullName = fullName;
-    }
-
-    public void setPassword(String password) {
-        this.password = password;
     }
 
     public Boolean getAccountNonExpired() {
         return accountNonExpired;
     }
 
-    public void setAccountNonExpired(Boolean accountNonExpired) {
-        this.accountNonExpired = accountNonExpired;
-    }
-
     public Boolean getAccountNonLocked() {
         return accountNonLocked;
-    }
-
-    public void setAccountNonLocked(Boolean accountNonLocked) {
-        this.accountNonLocked = accountNonLocked;
     }
 
     public Boolean getCredentialsNonExpired() {
         return credentialsNonExpired;
     }
 
-    public void setCredentialsNonExpired(Boolean credentialsNonExpired) {
-        this.credentialsNonExpired = credentialsNonExpired;
-    }
-
     public Boolean getEnabled() {
         return enabled;
     }
 
-    public void setEnabled(Boolean enabled) {
-        this.enabled = enabled;
-    }
-
     public List<Permission> getPermissions() {
         return permissions;
-    }
-
-    public void setPermissions(List<Permission> permissions) {
-        this.permissions = permissions;
     }
 
     //Equals && HashCode
